--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="referrer" content="no-referrer" />
-    <title>网易云随机音乐播放器</title>
+    <title>黑瞳随机音乐播放器</title>
     <link rel="stylesheet" href="css/solid.css">
     <link rel="stylesheet" href="css/fontawesome.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="imags/2.ico">
 </head>
 
 <body>
