--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/solid.css">
     <link rel="stylesheet" href="css/fontawesome.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" href="./imags/2.ico">
+    <link rel="shortcut icon" href="imags/icon.ico">
 </head>
 
 <body>
